// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Letter EXISTS renders correctly 1`] = `
<div
  className="border rounded-md flex items-center justify-center w-16 h-16 bg-yellow-500 border-yellow-500"
>
  <h2
    className="font-semibold text-3xl text-white"
  >
    A
  </h2>
</div>
`;

exports[`Letter MATCH renders correctly 1`] = `
<div
  className="border rounded-md flex items-center justify-center w-16 h-16 bg-green-500 border-green-500"
>
  <h2
    className="font-semibold text-3xl text-white"
  >
    A
  </h2>
</div>
`;

exports[`Letter MISSING renders correctly 1`] = `
<div
  className="border rounded-md flex items-center justify-center w-16 h-16 bg-red-500 border-red-500"
>
  <h2
    className="font-semibold text-3xl text-white"
  >
    A
  </h2>
</div>
`;

exports[`Letter default renders correctly 1`] = `
<div
  className="border rounded-md flex items-center justify-center w-16 h-16 "
>
  <h2
    className="font-semibold text-3xl "
  >
    A
  </h2>
</div>
`;
